--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600&display=swap");
 
-* {
+ * {
   margin: 0;
   padding: 0;
   max-width: 100%;
@@ -19,7 +19,8 @@ body{
 .content {
   background-color: #7c1fbf;
   max-width: 100%;
-  height: 25em;
+  height: 150em;
+  /* margin-bottom: 5em; */
   margin: auto;
   color: white;
 }
@@ -69,7 +70,7 @@ body{
 /* Home */
 
 .buy h1 {
-  padding-top: 30px;
+  padding-top: 40px;
   width: 400px;
   font-size: 20px;
   margin-left: 30px;
@@ -120,8 +121,9 @@ body{
 .sec_1 {
   position: relative;
   background-color: #f2f2f2;
-  height: 205em;
+  height: 200em;
   color: black;
+  margin-top: 5em;
 }
 
 .why h2 {
@@ -214,13 +216,9 @@ body{
 .steps {
   text-align: center;
   font-size: 20px;
-  margin-top: 10em;
+  margin-top: 5em;
   font-weight: bolder;
 }
-
-
-
-
 
 
 /* SECTION 2 */
@@ -300,12 +298,11 @@ body{
 
 .sec_3 {
   background-color: #f2f2f2;
-  height: 115em;
+  height: 110em;
   margin: auto;
   max-width: 100%;
   position: relative;
   top: 200px;
-  /* top: 30px; */
 }
 
 .sec_3 h2 {
@@ -440,7 +437,6 @@ body{
   margin: auto;
   max-width: 100%;
   position: relative;
-  top: 55em;
 }
 
 .welcome_page h2{
@@ -533,7 +529,6 @@ form p{
 
 .navbar_2{
   position: relative;
-  top: 56em;
   color: #7c1fbf;
   background-color: #7c1fbf;
   /* padding-bottom: -5em; */
@@ -548,8 +543,7 @@ form p{
   margin: auto;
   max-width: 100%;
   position: relative;
-  bottom: -55em;
-  padding-bottom: 10em;
+  padding-bottom: 8em;
 }
 
 .loginn h2{
@@ -624,16 +618,103 @@ form p{
     background-color:#636164 ;
   }
 
-  /* .buy_sell_2 {
-    border-style: none;
-    background-color:white;
-    padding: 5px;
-    width: 8em;
-    font-size: 10px;
-  }
+
+
+
+
+
+
+
+
+
+  /* MEDIA QUERY */
+
+  /* @media (min-width:768px)
   
-  .buy_sell_2 a{
+  {
+
+    *{
+      padding: 0;
+      margin: 0;
+    }
+
+    /* Navbar */
+/* .trade_logo img {
+  width: 15%;
+}
+
+.navbar a {
+  font-size: 18px;
+  padding: 8px;
+  margin-left: 0.5em;
+  position: relative;
+  right: 2em;
+
+}
+
+.start{
+    background-color: white;
     color: #7c1fbf;
-    font-size: 10px;
-  } */
+    border: none;
+    margin-top: 20px;
+    width: 150px;
+    padding: 10px 22px 10px 22px;
+    font-size: 15px;
+    margin-left: 30px;
+  }
+} */
+
+
+
+/* .links {
+  position: relative;
+  bottom: 3em;
+  left: 35em;
+} */
+
+/* Home */
+
+/* .buy h1 {
+  padding-top: 30px;
+  width: 400px;
+  font-size: 20px;
+  margin-left: 30px;
+} */
+
+/* .crypto {
+  padding-top: 20px;
+  width: 210px;
+  font-size: 8px;
+  margin-left: 30px;
+}
+
+.btn {
+  background-color: white;
+  color: #7c1fbf;
+  border: none;
+  margin-top: 20px;
+  width: 150px;
+  padding: 10px 22px 10px 22px;
+  font-size: 15px;
+  margin-left: 30px;
+}
+
+
+
+/* App store */
+
+/* .store {
+  position: relative;
+  display: flex;
+  top: 10px;
+  margin-left: 30px;
+  justify-content: space-between;
+}
+
+.android {
+  position: relative;
+  left: -80px;
+} */
+
+
   
